testcases/pos/labeled/no_block_on_valdecl_with_no_annotation.bard
let val x = 3 raisedTo {secret}
    val y = x
in
    y
end
