testcases/neg/eval_type/receive_secret_context.bard
let val x = true raisedTo {secret}
    val y = if x then receive: Int else -1
in
    receive: Int
end
